@@ -8,7 +8,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 
-import java.nio.file.Files;
 import java.security.KeyFactory;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.PKCS8EncodedKeySpec;
@@ -26,20 +25,25 @@ public class SalesforceAuthService {
     @Value("${salesforce.loginUrl}")
     private String loginUrl;
 
-    @Value("classpath:server-key.pem")
+    @Value("classpath:server-key.pem")   // ✅ التصحيح الأول
     private Resource privateKeyFile;
 
     // Load private key
-    private RSAPrivateKey loadPrivateKey() throws Exception {
-        byte[] keyBytes = Files.readAllBytes(privateKeyFile.getFile().toPath());
-        String keyString = new String(keyBytes)
-                .replace("-----BEGIN PRIVATE KEY-----", "")
-                .replace("-----END PRIVATE KEY-----", "")
-                .replaceAll("\\s+", "");
+    private RSAPrivateKey loadPrivateKey() throws Exception {    // ✅ التصحيح الثاني كامل
+        try (var is = privateKeyFile.getInputStream()) {
+            byte[] keyBytes = is.readAllBytes();
 
-        byte[] decoded = java.util.Base64.getDecoder().decode(keyString);
-        PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
-        return (RSAPrivateKey) KeyFactory.getInstance("RSA").generatePrivate(keySpec);
+            String keyString = new String(keyBytes)
+                    .replace("-----BEGIN PRIVATE KEY-----", "")
+                    .replace("-----END PRIVATE KEY-----", "")
+                    .replaceAll("\\s+", "");
+
+            byte[] decoded = java.util.Base64.getDecoder().decode(keyString);
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(decoded);
+
+            return (RSAPrivateKey) KeyFactory.getInstance("RSA")
+                    .generatePrivate(keySpec);
+        }
     }
 
     // Create the JWT token
